--- a/truths.html
+++ b/truths.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>2 Truths and a Lie Website</title>
-       <link rel = "stylesheet" type = "text/css" href = "truthstle.css"
+       <link rel = "stylesheet" type = "text/css" href = "truthstyle.css"
     </head>
     <body style="background-color:powderblue;">
     <h1>Anika's <a href= "http://www.icebreakers.ws/small-group/two-truths-and-a-lie.html" target="_blank">2 Truths and a Lie Page</a></h1>
