--- a/jokes.html
+++ b/jokes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>jQuery Puns</title>
+    <link rel = "stylesheet" type = "text/css" href = "jokestyle.css">
     </head>
     <body>
     <h1>ScriptEd Pun-A-Thon</h1>
