--- a/jokes.html
+++ b/jokes.html
@@ -18,5 +18,9 @@
     </div>
     <hr>
         <img id="joke-4" src="https://s16.postimg.org/5fso4wcmd/t_WNHJEV.jpghttps://s16.postimg.org/5mu1wwjx1/ZCIkkze.jpg">
+        <script type= "text/javascript" 
+         src="https://code.jquesry,com/jquert-2.2.4.min.js"></script
+         >
+         <script type= "text/javascript" src="jokejava.js"></script>
 </body>
 </html>
