--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,4 +1,3 @@
-html: 
 <!DOCTYPE html>
 <html>
     <head>
@@ -35,11 +34,13 @@ html:
 <input type="radio" name="q5" value="2" id="q1r"><label for="q1b">Answer 2</label><br/>
 <input type="radio" name="q5" value="3" id="q1s"><label for="q1c">Answer 3</label><br/>
 <input type="radio" name="q5" value="4" id="q1t"><label for="q1d">Answer 4</label><br/> 
-<h3>Your Score is:</h3>
+<h3>Your Score: </h3>
 <h4>Now take your score and compare it to find your college major!</h4>
 <button id="button">Submit and let a Simple Online Test Determine your Entire College Major!</button>
+<br><button id="reset">Reset</button>
     </body>
 </html>
+
 
 java:
 var num= 0;
