--- a/FinalProject.html
+++ b/FinalProject.html
@@ -10,7 +10,7 @@ html:
 <input type="radio" name="q1" value="1" id="q1a"><label for="q1a"> Looking through stock reports </label><br/>
 <input type="radio" name="q1" value="2" id="q1b"><label for="q1b"> Coding... obviously</label><br/>
 <input type="radio" name="q1" value="3" id="q1c"><label for="q1c"> Volunteer at the local hospital and talking to the patients</label><br/>
-<input type="radio" name="q1" value="4" id="q1d"><label for="q1d"> Trying to play a symphony written for an orquestra as a solo</label><br/> 
+<input type="radio" name="q1" value="4" id="q1d"><label for="q1d"> Trying to play a symphony written for an orchestra as a solo</label><br/> 
 
 <p class="question">2. If you had pick one item from your room that you had to carry for the rest of your life, what would it be?</p>
 <input type="radio" name="q2" value="1" id="q1e"><label for="q1a"> MY MONEY! ( is that even a question?!?)</label><br/>
@@ -28,7 +28,7 @@ html:
 <input type="radio" name="q4" value="1" id="q1m"><label for="q1a"> Math</label><br/>
 <input type="radio" name="q4" value="2" id="q1n"><label for="q1b"> Engineering</label><br/>
 <input type="radio" name="q4" value="3" id="q1o"><label for="q1c"> Biology</label><br/>
-<input type="radio" name="q4" value="4" id="q1p"><label for="q1d"> band/Orquestra</label><br/> 
+<input type="radio" name="q4" value="4" id="q1p"><label for="q1d"> band/orchestra</label><br/> 
 
 <p class="question">5. What is your favorite TV show?</p>
 <input type="radio" name="q5" value="1" id="q1q"><label for="q1a"> Shark Tank</label><br/>
