--- a/FinalProject.html
+++ b/FinalProject.html
@@ -19,7 +19,7 @@ html:
 <input type="radio" name="q2" value="4" id="q1h"><label for="q1d"> My Instruments!</label><br/> 
 
 <p class="question">3. How do your friends describe you?</p>
-<input type="radio" name="q3" value="1" id="q1i"><label for="q1a"> Logicial </label><br/>
+<input type="radio" name="q3" value="1" id="q1i"><label for="q1a"> Logical </label><br/>
 <input type="radio" name="q3" value="2" id="q1j"><label for="q1b"> Analytical </label><br/>
 <input type="radio" name="q3" value="3" id="q1k"><label for="q1c"> Caring </label><br/>
 <input type="radio" name="q3" value="4" id="q1l"><label for="q1d"> Artistic</label><br/> 
@@ -28,24 +28,48 @@ html:
 <input type="radio" name="q4" value="1" id="q1m"><label for="q1a"> Math</label><br/>
 <input type="radio" name="q4" value="2" id="q1n"><label for="q1b"> Engineering</label><br/>
 <input type="radio" name="q4" value="3" id="q1o"><label for="q1c"> Biology</label><br/>
-<input type="radio" name="q4" value="4" id="q1p"><label for="q1d"> band/orchestra</label><br/> 
+<input type="radio" name="q4" value="4" id="q1p"><label for="q1d"> Band/ Orchestra</label><br/> 
 
 <p class="question">5. What is your favorite TV show?</p>
 <input type="radio" name="q5" value="1" id="q1q"><label for="q1a"> Shark Tank</label><br/>
 <input type="radio" name="q5" value="2" id="q1r"><label for="q1b"> The Big Bang Theory</label><br/>
 <input type="radio" name="q5" value="3" id="q1s"><label for="q1c"> Grey's Anatomy</label><br/>
 <input type="radio" name="q5" value="4" id="q1t"><label for="q1d"> Glee Club</label><br/> 
-<h3>Your Score: </h3>
-<h4>Now take your score and compare it to find your college major!</h4>
 <button id="button">Submit and let a Simple Online Test Determine your Entire College Major!</button>
 <br><button id="reset">Reset</button>
-<br> If your score is:
+<h3>Your Score: </h3>
+<h4>Now take your score and compare it to find your college major!</h4>
+<br><label id="score">If your score is: </label>
 <br> Between 5 and 8 ... you should consider going into Business! 
 <br> Between 9 and 12 ... you should consider applying to Computer Science or Engineering!
 <br> Between 13 and 16 ... Nursing seems like a good option for you!
 <br> Between 17 and 20... Do you like music? You should go into that field!
     </body>
 </html>
+
+CSS:
+h1 {
+    color: #5D4C46;
+}
+label {
+    color: skyblue;
+}
+p {
+    color: coral;
+}
+h3 {
+    color: #ffdac5;
+}
+h4 {
+    color: darkgray;
+}
+#score {
+    color: skyblue;
+}
+body {
+    color: #5D4C46;
+}
+
 
 
 java:
