--- a/Final.html
+++ b/Final.html
@@ -1,8 +1,8 @@
-    html:
+Html:
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Beets</title>
+        <title>My Coding Page</title>
       <link rel="stylesheet" type="text/css" href= "hack2.css">
     </head>
     <div id="wrapper">
@@ -13,18 +13,20 @@
     <div id="body">
         <div id="home">Welcome to the Home Page...</div>
         <div id="about">About me: I am a high school sophomore who loves math and science (I am a self-proclaimed nerd). I am hoping to study engineering at the University of Michigan in future years</div>
-        <div id="truths">truths</div>
-        <div id="hackathons">hackathons</div>
-        <div id="jokes">jokes</div>
-        <div id="madlibs">madlibs</div>
-        <div id="final_project">final project</div>
+        <div id="truths"><a href="https://anikagupta47.github.io/Anikaportfolio/truths.html" target="_blank">Truths:</a> The first website of many more to come</div>
+        <div id="hackathons">Hackathon: The<a href="https://anikagupta47.github.io/Anikaportfolio/CamelHackathon.html" target="_blank">Camel</a> Hackathon and the<a href="https://anikagupta47.github.io/Anikaportfolio/hack2.html" target="_blank">Beet</a> Farm one too!</div>
+        <div id="jokes"><a href="https://anikagupta47.github.io/Anikaportfolio/jokes.html" target="_blank">Jokes:</a> Need a little laugh?</div>
+        <div id="madlibs">Madlibs:</div>
+        <div id="final_project">Final Project: How much I've learned in a week! </div>
+        <div id="block"></div>
+        <div id="oranges">Do you love organges?? Here are some super cool recipes!</div>
+        <div id="box"></div>
     </div>
     </body>
     </div>
     </html>
 
 
-   
 css:
 #wrapper {
     height: 900px;
