--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,4 +1,4 @@
-html:
+Html:
 <!DOCTYPE html>
 <html>
     <head>
@@ -47,7 +47,8 @@ html:
     </body>
 </html>
 
-CSS:
+
+css:
 h1 {
     color: #5D4C46;
 }
@@ -71,8 +72,7 @@ body {
 }
 
 
-
-java:
+JAVA:
 var num= 0;
 $("#button").click(function () {
 num = num + parseInt( $('input[name=q1]:checked').val());
