--- a/FinalProject2.html
+++ b/FinalProject2.html
@@ -45,3 +45,8 @@
 <br> Between 17 and 20... Do you like music? You should go into that field!
     </body>
 </html>
+<link rel = "stylesheet" type = "text/css" href = "FinalProject2.css">
+ <script type="text/javascript" 
+         src="https://code.jquery.com/jquery-2.2.4.min.js"></script
+         >
+         <script type="text/javascript" src="FinalProject2.js"></script>
