--- a/Final2.html
+++ b/Final2.html
@@ -3,7 +3,7 @@ Html:
 <html>
     <head>
         <title>My Coding Page</title>
-      <link rel="stylesheet" type="text/css" href= "hack2.css">
+      <link rel="stylesheet" type="text/css" href= "Final2.css">
     </head>
     <div id="wrapper">
      <div id="head1"class="center-div"><h1>Anika Gupta</h1></div>
