--- a/Final2.html
+++ b/Final2.html
@@ -18,7 +18,7 @@
         <div id="madlibs">Madlibs:</div>
         <div id="final_project">Final Project: How much I've learned in a week! </div>
         <div id="block"></div>
-        <div id="oranges">Do you love organges?? Here are some super cool recipes!</div>
+        <div id="oranges">Do you love organges?? Here are some super cool<a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes</a>!</div>
         <div id="box"></div>
     </div>
     </body>
