--- a/Final2.html
+++ b/Final2.html
@@ -15,10 +15,10 @@
         <div id="truths"><a href="https://anikagupta47.github.io/Anikaportfolio/truths.html" target="_blank">Truths:</a> The first website of many more to come</div>
         <div id="hackathons">Hackathon: The<a href="https://anikagupta47.github.io/Anikaportfolio/CamelHackathon.html" target="_blank">Camel</a> Hackathon and the<a href="https://anikagupta47.github.io/Anikaportfolio/hack2.html" target="_blank">Beet</a> Farm one too!</div>
         <div id="jokes"><a href="https://anikagupta47.github.io/Anikaportfolio/jokes.html" target="_blank">Jokes:</a> Need a little laugh?</div>
-        <div id="madlibs">Madlibs:</div>
-        <div id="final_project">Final Project: How much I've learned in a week! </div>
+        <div id="madlibs"><a href="https://anikagupta47.github.io/Anikaportfolio/partofspeech.html" target="_blank">Madlibs:</a> Let you silly side out for a bit!</div>
+        <div id="final_project"><a href="https://anikagupta47.github.io/Anikaportfolio/FinalProject2.html" target="_blank">Final Project:</a> How much I've learned in a week! </div>
         <div id="block"></div>
-        <div id="oranges">Do you love organges?? Here are some super cool<a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes</a>!</div>
+        <div id="oranges">Do you love organges?? Here are some super cool recipes!</div>
         <div id="box"></div>
     </div>
     </body>
