--- a/Final2.html
+++ b/Final2.html
@@ -18,7 +18,7 @@
         <div id="madlibs"><a href="https://anikagupta47.github.io/Anikaportfolio/partofspeech.html" target="_blank">Madlibs:</a> Let you silly side out for a bit!</div>
         <div id="final_project"><a href="https://anikagupta47.github.io/Anikaportfolio/FinalProject2.html" target="_blank">Final Project:</a> How much I've learned in a week! </div>
         <div id="block"></div>
-        <div id="oranges">Do you love organges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div>
+        <div id="oranges">Do you love oranges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div>
         <div id="box"></div>
     </div>
     </body>
