--- a/FinalProject2.html
+++ b/FinalProject2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>College Major Test</title>
         <h1>What Should your College Major be?</h1>
         <link rel = "stylesheet" type = "text/css" href = "FinalProject2.css">
     </head>
