--- a/Final2.html
+++ b/Final2.html
@@ -3,6 +3,8 @@
     <head>
         <title>My Coding Page</title>
       <link rel="stylesheet" type="text/css" href= "Final2.css">
+
+
     </head>
     <div id="wrapper">
      <div id="head1"class="center-div"><h1>Anika Gupta</h1></div>
@@ -17,10 +19,11 @@
         <div id="jokes"><a href="https://anikagupta47.github.io/Anikaportfolio/jokes.html" target="_blank">Jokes:</a> Need a little laugh?</div>
         <div id="madlibs"><a href="https://anikagupta47.github.io/Anikaportfolio/partofspeech.html" target="_blank">Madlibs:</a> Let your silly side out for a bit!</div>
         <div id="final_project"><a href="https://anikagupta47.github.io/Anikaportfolio/FinalProject2.html" target="_blank">Final Project:</a> How much I've learned in a week! </div>
-        <div id="block"></div>
-        <div id="oranges">Do you love oranges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div>
+        <div id="block"><div class = "orangeOverlay">Look out for more awesome <a href="https://giphy.com/search/nature?utm_source=media-link&utm_medium=landing&utm_campaign=Media%20Links&utm_term=https://www.google.com/" target="_blank">gifs!</a></div></div>
+        <div id = "oranges"><div class = "blueOverlay">Do you love oranges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div></div>
         <div id="box"></div>
     </div>
     </body>
     </div>
     </html>
+
