--- a/Final2.html
+++ b/Final2.html
@@ -21,7 +21,7 @@
         <div id="final_project"><a href="https://anikagupta47.github.io/Anikaportfolio/FinalProject2.html" target="_blank">Final Project:</a> How much I've learned in a week! </div>
         <div id="block"><div class = "orangeOverlay">Look out for more awesome <a href="https://giphy.com/search/nature?utm_source=media-link&utm_medium=landing&utm_campaign=Media%20Links&utm_term=https://www.google.com/" target="_blank">gifs!</a></div></div>
         <div id = "oranges"><div class = "blueOverlay">Do you love oranges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div></div>
-        <div id="box"></div>
+        <div id="box">Want to learn how to code for yourself now? Click <a href="https://www.codecademy.com" target="_blank">here</a> to code your own future.</div>
     </div>
     </body>
     </div>
