--- a/FinalProject.html
+++ b/FinalProject.html
@@ -1,9 +1,105 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>My Coding Page</title>
+      <link rel="stylesheet" type="text/css" href= "Final2.css">
+
+
+    </head>
+    <div id="wrapper">
+     <div id="head1"class="center-div"><h1>Anika Gupta</h1></div>
+     <div id="box1" class="center-div"></div>
+     <div id="head2"><h2>My Coding Life...</h2></div>
+    <body>
+    <div id="body">
+        <div id="home">Welcome to the Home Page...</div>
+        <div id="about">About me: I am a high school sophomore who loves math and science (I am a self-proclaimed nerd). I am hoping to study engineering at the University of Michigan in future years</div>
+        <div id="truths"><a href="https://anikagupta47.github.io/Anikaportfolio/truths.html" target="_blank">Truths:</a> The first website of many more to come</div>
+        <div id="hackathons">Hackathon: The <a href="https://anikagupta47.github.io/Anikaportfolio/CamelHackathon.html" target="_blank">Camel</a> Hackathon and the <a href="https://anikagupta47.github.io/Anikaportfolio/hack2.html" target="_blank">Beet</a> Farm one too!</div>
+        <div id="jokes"><a href="https://anikagupta47.github.io/Anikaportfolio/jokes.html" target="_blank">Jokes:</a> Need a little laugh?</div>
+        <div id="madlibs"><a href="https://anikagupta47.github.io/Anikaportfolio/partofspeech.html" target="_blank">Madlibs:</a> Let your silly side out for a bit!</div>
+        <div id="final_project"><a href="https://anikagupta47.github.io/Anikaportfolio/FinalProject2.html" target="_blank">Final Project:</a> How much I've learned in a week! </div>
+        <div id="block"><div class = "orangeOverlay">Look out for more awesome <a href="https://giphy.com/search/nature?utm_source=media-link&utm_medium=landing&utm_campaign=Media%20Links&utm_term=https://www.google.com/" target="_blank">gifs!</a></div></div>
+        <div id = "oranges"><div class = "blueOverlay">Do you love oranges?? Here are some super cool <a href="https://www.pinterest.com/MarySedivy/oranges-orange-recipes/" target="_blank">recipes!</a></div></div>
+        <div id="box">Want to learn how to code for yourself now? Click <a href="https://lsa.umich.edu/wise/k-12-students-families/summer-camps/robotc-for-girls--full-closed-for-2016.html" target="_blank">here</a> to code your own future.</div>
+    </div>
+    </body>
+    </div>
+    </html>
+
+
+#wrapper {
+    height: 900px;
+    width: 1000px;
+    background-color:white;}
+#head1{height:150px;width:900px; font-size:50px;color:black; text-align: center;}
+#box1{height:30px;width:900px; background-color:#44B3C2; }
+#head2{height:90px;width:500px; font-size:40px; color:white; background-color:#F1A94E;font-family:Snell Roundhand;}
+.center-div
+{
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#home{height:300px;width:200px;font-size:35px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
+#about{height:300px;width:200px;font-size:22px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+#truths{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
+#hackathons{height:300px;width:200px;font-size:38px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+#jokes{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
+#madlibs{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+#final_project{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
+#block{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;background-image:url("https://media.giphy.com/media/E8BKRmebpiire/giphy.gif");}
+#oranges{height:300px;width:200px;font-size:35px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;background-image:url("https://s-media-cache-ak0.pinimg.com/236x/a2/e1/a6/a2e1a612933ac92d91d07d88572ce4c4--oranges-wallpaper-wallpaper-orange.jpg");}
+#box{height:300px;width:200px;font-size:34px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+a
+{
+    color: #ffffff;
+}
+#home:hover {
+    background-color: #44B3C2;
+}
+#about:hover {
+    background-color: #F1A94E;
+}
+#truths:hover {
+    background-color: #44B3C2;
+}
+#hackathons:hover {
+    background-color: #F1A94E;
+}
+#jokes:hover {
+    background-color: #44B3C2;
+}
+#madlibs:hover {
+    background-color: #F1A94E;
+}
+#final_project:hover {
+    background-color: #44B3C2;
+}
+#block:hover {
+    background-color: #F1A94E;
+}
+#oranges:hover {
+}
+.blueOverlay:hover{
+    background-color: rgba(68,179,194,1);
+}
+.orangeOverlay:hover{
+    background-color: #F1A94E;
+}
+#box:hover {
+    background-color: #F1A94E;
+}
+
+/*These lines of code are for outlining the div tags and showing what text and at what specifications should show up*/
+
+
+<!DOCTYPE html>
+<html>
+    <head>
         <title>Page Title</title>
         <h1>What Should your College Major be?</h1>
-        
     </head>
     <body>
      <p class="question">1. What is your favorite pass time activity?</p>
@@ -44,11 +140,16 @@
 <br> Between 9 and 12 ... you should consider applying to Computer Science or Engineering!
 <br> Between 13 and 16 ... Nursing seems like a good option for you!
 <br> Between 17 and 20... Do you like music? You should go into that field!
+<script type="text/javascript" 
+    src="https://code.jquery.com/jquery-2.2.4.min.js"></script
+         >
+         <script type="text/javascript" src="FinalProject2.js"></script>
     </body>
 </html>
 
 
-css:
+
+
 h1 {
     color: #5D4C46;
 }
@@ -59,10 +160,10 @@ p {
     color: coral;
 }
 h3 {
-    color: #ffdac5;
+    color: coral;
 }
 h4 {
-    color: darkgray;
+    color: coral;
 }
 #score {
     color: skyblue;
@@ -70,9 +171,13 @@ h4 {
 body {
     color: #5D4C46;
 }
+body {
+background-color: #e4e4e4;
+}
 
 
-JAVA:
+
+
 var num= 0;
 $("#button").click(function () {
 num = num + parseInt( $('input[name=q1]:checked').val());
@@ -86,3 +191,4 @@ $("#reset").click( function() {
     $("h3").html("Your Score: ");
     num=0;
 });
+
